[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://world/ametista_mining_comet.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://textures/ametista-block.png" id="2_tex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_range"]
radius = 140.0

[node name="AmetistaMiningComet" type="StaticBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_script")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tex")
scale = Vector2(0.35, 0.35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="RangeShape" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_range")

[node name="Prompt" type="Label" parent="."]
offset_left = -140.0
offset_top = -120.0
offset_right = 140.0
offset_bottom = -90.0
horizontal_alignment = 1
text = "E - Minerar Ametista"
visible = false

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
